--- a/2ndOblig/style/css/stylesheet.css
+++ b/2ndOblig/style/css/stylesheet.css
@@ -8,5 +8,6 @@ img {border-radius:10%;
 button {color:rgb(127, 227, 255);}
 
 .artikkeltekst {
-    text-align: center;
+    text-align: left;
+    margin: 30 0 30 0;
 }
