--- a/2ndOblig/style/css/stylesheet.css
+++ b/2ndOblig/style/css/stylesheet.css
@@ -14,6 +14,10 @@ button {color:rgb(127, 227, 255);}
     margin: 0 50px 0 50px;
 }
 
-.byline {
-    color:grey;
+#byline {
+    color: grey;
+}
+
+h1, h2, h3 {
+    font-family: sans-serif;
 }
