--- a/2ndOblig/style/css/stylesheet.css
+++ b/2ndOblig/style/css/stylesheet.css
@@ -12,6 +12,7 @@ button {color:rgb(127, 227, 255);}
 .artikkeltekst {
     text-align: left;
     margin: 0 50px 0 50px;
+    font-family: sans-serif;
 }
 
 #byline {
