--- a/2ndOblig/style/css/stylesheet.css
+++ b/2ndOblig/style/css/stylesheet.css
@@ -16,8 +16,11 @@ button {color:rgb(127, 227, 255);
 .artikkeltekst {
     text-align: left;
     margin: 0 40px 0 40px;
-    margin-right: 0 100px 0 100px;
     font-family: sans-serif;
+}
+
+p {
+    margin-right: 150px;
 }
 
 #byline {
