--- a/2ndOblig/style/css/stylesheet.css
+++ b/2ndOblig/style/css/stylesheet.css
@@ -6,8 +6,7 @@ img {
     width:90%;
 }
 
-.knapp {color:rgb(127, 227, 255);
-    text-align:right;}
+.knapp {text-align: right;}
 
 .topp {
     margin: 0 40px 0 40px;
