--- a/2ndOblig/style/css/stylesheet.css
+++ b/2ndOblig/style/css/stylesheet.css
@@ -1,4 +1,5 @@
-body {text-align:left;
+body {
+    text-align:left;
 }
 
 img {
@@ -10,17 +11,12 @@ button {color:rgb(127, 227, 255);
     text-align:right;}
 
 .topp {
-    margin: 0 40px 0 40px;
+    margin: 0px 50px 0px 100px;
 }
 
 .artikkeltekst {
-    text-align: left;
-    margin: 0 40px 0 40px;
+    margin: 0px 0px 0px 100px;
     font-family: sans-serif;
-}
-
-p {
-    margin-right: 150px;
 }
 
 #byline {
