--- a/2ndOblig/style/css/stylesheet.css
+++ b/2ndOblig/style/css/stylesheet.css
@@ -7,7 +7,8 @@ img {
     width:90%;
 }
 
-.knapp {text-align: right;}
+.knapp {text-align: right;
+color:orange;}
 
 .topp {
     margin: 0px 50px 0px 100px;
