--- a/2ndOblig/style/css/stylesheet.css
+++ b/2ndOblig/style/css/stylesheet.css
@@ -7,14 +7,16 @@ img {
     width:90%;
 }
 
-.knapp {text-align: right;}
+.knapp {
+    text-align: right;
+}
 
 .topp {
-    margin: 0px 100px 0px 100px;
+    margin: 0px 200px 0px 200px;
 }
 
 .artikkeltekst {
-    margin: 0px 100px 0px 100px;
+    margin: 0px 200px 0px 200px;
     font-family: sans-serif;
 }
 
