--- a/2ndOblig/style/css/stylesheet.css
+++ b/2ndOblig/style/css/stylesheet.css
@@ -1,22 +1,23 @@
 body {
     text-align:left;
-    margin: 0px 250px 0px 100px;
-}
-
-.topp {
-    font-family: sans-serif;
 }
 
 img {
-    height:100%;
-    width:100%;
+    height:90%;
+    width:90%;
 }
 
 .knapp {
     text-align: right;
 }
 
+.topp {
+    margin: 0px 200px 0px 100px;
+    font-family:sans-serif;
+}
+
 .artikkeltekst {
+    margin: 0px 200px 0px 100px;
     font-family: sans-serif;
 }
 
@@ -24,7 +25,7 @@ img {
     color: grey;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3 {
     font-family: sans-serif;
 }
 
@@ -39,9 +40,4 @@ caption {
 
 li {
     font-family: sans-serif;
-}
-
-footer {
-    background-color: bisque;
-    border: solid;
 }
