--- a/2ndOblig/style/css/stylesheet.css
+++ b/2ndOblig/style/css/stylesheet.css
@@ -42,7 +42,7 @@ li {
 }
 
 footer {
-    background-color: blue;
+    background-color: pastelblue;
     border: solid;
     margin: 0 200px 0 100px;
 }
