--- a/2ndOblig/style/css/stylesheet.css
+++ b/2ndOblig/style/css/stylesheet.css
@@ -45,6 +45,7 @@ footer {
     background-color: blue;
     border: solid;
     margin: 0 200px 0 100px;
+    vertical-align: left;
 }
 
 .secondpage {
