--- a/2ndOblig/style/css/stylesheet.css
+++ b/2ndOblig/style/css/stylesheet.css
@@ -42,7 +42,7 @@ li {
 }
 
 footer {
-    background-color: aqua;
+    background-color: rgba(188, 228, 228, 0.216);
     border: solid;
     margin: 0 200px 0 100px;
     vertical-align: left;
