--- a/2ndOblig/style/css/stylesheet.css
+++ b/2ndOblig/style/css/stylesheet.css
@@ -41,7 +41,7 @@ li {
     text-align: right;
 }
 
-footer {
+footer1 {
     background-color: rgba(188, 228, 228, 0.216);
     border: solid;
     margin: 0 200px 0 100px;
@@ -50,4 +50,7 @@ footer {
 
 .secondpage {
     margin: 0 200px 0 100px;
+    background-color: rgba(188, 228, 228, 0.216);
+    border: solid;
+    vertical-align: left;
 }
