--- a/2ndOblig/style/css/stylesheet.css
+++ b/2ndOblig/style/css/stylesheet.css
@@ -41,7 +41,7 @@ li {
     text-align: right;
 }
 
-footer1 {
+.footer1 {
     background-color: rgba(188, 228, 228, 0.216);
     border: solid;
     margin: 0 200px 0 100px;
@@ -50,7 +50,5 @@ footer1 {
 
 .secondpage {
     margin: 0 200px 0 100px;
-    background-color: rgba(188, 228, 228, 0.216);
-    border: solid;
-    vertical-align: left;
+   
 }
