--- a/2ndOblig/style/css/stylesheet.css
+++ b/2ndOblig/style/css/stylesheet.css
@@ -1,4 +1,4 @@
-body {
+.secondpage {
     text-align:left;
     margin: 0px 250px 0px 100px;
 }
@@ -53,3 +53,23 @@ li {
     margin: 0 200px 0 100px;
    
 }
+
+.header {
+    padding: 60px;
+    text-align: center;
+    background-color: #FFD500;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.header img {
+  align-content: center;
+  max-width: 10%;
+  height: auto; 
+}
+
+.header h1 {
+  text-align: center;
+  font-weight: 500;
+  font-size: 3rem;
+}
+
